--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.14.1",
     "dayjs": "^1.11.18",
+    "i18next": "^25.6.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.1",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "i18next-cli": "^1.16.0",
     "vite": "^7.1.7"
   }
 }
