--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^8.14.1",
     "axios": "^1.13.2",
     "dayjs": "^1.11.18",
+    "firebase": "^12.5.0",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
